--- a/index.html
+++ b/index.html
@@ -15,7 +15,166 @@
 
 <body>
 
+    <div id="app">
 
+        <main>
+            <div class="container">
+                <div class="row h-100">
+                    <div class="col-4 px-0">
+
+                        <!-- Div che contiene due div, uno per l'immagine profilo e uno per le icone -->
+                        <div class="d-flex justify-content-between align-items-center p-3 bg-profile">
+                            <div> <img src="./img/avatar_io.jpg" alt=""> Sofia </div>
+                            <div class="d-flex">
+                                <i class="fa-solid fa-circle-notch mx-2 fs-5"></i>
+                                <i class="fa-solid fa-message mx-2 fs-5"></i>
+                                <i class="fa-solid fa-ellipsis-vertical mx-2 fs-5"></i>
+                            </div>
+
+                        </div>
+
+                        <!-- Div che contiene due div, uno per l'icona e uno per le scritte -->
+                        <div class="d-flex pt-3 bg-notifications p-3">
+                            <div>
+                                <i class="fa-solid fa-bell-slash fs-5 color-notifications"></i>
+                            </div>
+
+                            <div class="ms-3">
+                                <p class="mb-0">Ricevi notifiche di nuovi messaggi</p>
+                                <a href="" class="text-secondary">Attiva notifiche desktop</a>
+                            </div>
+                        </div>
+
+                        <!-- Div che contiene un pulsante e un input per il filtraggio dei contatti -->
+                        <div>
+                            <div class="input-group my-1 border border-secondary">
+                                <button class="btn btn-sm bg-light border-0 px-3 " type="button" id="button-addon1"><i
+                                        class="fa-solid fa-magnifying-glass" style="color: #c0c0c0;"></i></button>
+                                <input type="text" class="form-control" placeholder="Cerca o inizia una nuova chat"
+                                    aria-label="Example text with button addon" aria-describedby="button-addon1">
+                            </div>
+
+                        </div>
+
+                        <!-- Div che contiene la lista dei contatti -->
+                        <div class="bg-light">
+                            <ul class="p-0">
+                                <li class="d-flex align-items-center justify-content-between pb-3 pt-1 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                                <li class="d-flex align-items-center justify-content-between py-3 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                                <li class="d-flex align-items-center justify-content-between py-3 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                                <li class="d-flex align-items-center justify-content-between py-3 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                                <li class="d-flex align-items-center justify-content-between py-3 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                                <li class="d-flex align-items-center justify-content-between py-3 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                                <li class="d-flex align-items-center justify-content-between py-3 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                                <li class="d-flex align-items-center justify-content-between py-3 pe-2">
+                                    <div class="d-flex">
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div>
+                                            <p class="m-0">Michele</p>
+                                            <p class="text-secondary">Ultimo messaggio inviato</p>
+                                        </div>
+                                    </div>
+                                    <div class="w-25 align-self-start text-end text-secondary">
+                                        <p>12:00</p>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-8 pt-3">
+                        ciao
+                    </div>
+                </div>
+            </div>
+        </main>
+
+    </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
