--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 <body>
 
-    <div id="app">
 
-        <main>
-            <div class="container">
+    <main>
+        <div id="app">
+            <div class="container pb-5">
                 <div class="row h-100">
                     <div class="col-4 px-0">
 
@@ -26,9 +26,9 @@
                         <div class="d-flex justify-content-between align-items-center p-3 bg-profile">
                             <div> <img src="./img/avatar_io.jpg" alt=""> Sofia </div>
                             <div class="d-flex">
-                                <i class="fa-solid fa-circle-notch mx-2 fs-5"></i>
-                                <i class="fa-solid fa-message mx-2 fs-5"></i>
-                                <i class="fa-solid fa-ellipsis-vertical mx-2 fs-5"></i>
+                                <i class="fa-solid fa-circle-notch mx-2 fs-5 text-secondary"></i>
+                                <i class="fa-solid fa-message mx-2 fs-5 text-secondary"></i>
+                                <i class="fa-solid fa-ellipsis-vertical mx-2 fs-5 text-secondary"></i>
                             </div>
 
                         </div>
@@ -58,8 +58,8 @@
 
                         <!-- Div che contiene la lista dei contatti -->
                         <div class="bg-light">
-                            <ul class="p-0">
-                                <li class="d-flex align-items-center justify-content-between pb-3 pt-1 pe-2">
+                            <ul class="p-0 m-0">
+                                <li class="d-flex align-items-center justify-content-between pb-3 pt-2 pe-2">
                                     <div class="d-flex">
                                         <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
                                         <div>
@@ -74,7 +74,7 @@
 
                                 <li class="d-flex align-items-center justify-content-between py-3 pe-2">
                                     <div class="d-flex">
-                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_2.jpg" alt=""></div>
                                         <div>
                                             <p class="m-0">Michele</p>
                                             <p class="text-secondary">Ultimo messaggio inviato</p>
@@ -87,7 +87,7 @@
 
                                 <li class="d-flex align-items-center justify-content-between py-3 pe-2">
                                     <div class="d-flex">
-                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_3.jpg" alt=""></div>
                                         <div>
                                             <p class="m-0">Michele</p>
                                             <p class="text-secondary">Ultimo messaggio inviato</p>
@@ -100,7 +100,7 @@
 
                                 <li class="d-flex align-items-center justify-content-between py-3 pe-2">
                                     <div class="d-flex">
-                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_4.jpg" alt=""></div>
                                         <div>
                                             <p class="m-0">Michele</p>
                                             <p class="text-secondary">Ultimo messaggio inviato</p>
@@ -113,7 +113,7 @@
 
                                 <li class="d-flex align-items-center justify-content-between py-3 pe-2">
                                     <div class="d-flex">
-                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_5.jpg" alt=""></div>
                                         <div>
                                             <p class="m-0">Michele</p>
                                             <p class="text-secondary">Ultimo messaggio inviato</p>
@@ -126,7 +126,7 @@
 
                                 <li class="d-flex align-items-center justify-content-between py-3 pe-2">
                                     <div class="d-flex">
-                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_6.jpg" alt=""></div>
                                         <div>
                                             <p class="m-0">Michele</p>
                                             <p class="text-secondary">Ultimo messaggio inviato</p>
@@ -139,7 +139,7 @@
 
                                 <li class="d-flex align-items-center justify-content-between py-3 pe-2">
                                     <div class="d-flex">
-                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_7.jpg" alt=""></div>
                                         <div>
                                             <p class="m-0">Michele</p>
                                             <p class="text-secondary">Ultimo messaggio inviato</p>
@@ -152,7 +152,7 @@
 
                                 <li class="d-flex align-items-center justify-content-between py-3 pe-2">
                                     <div class="d-flex">
-                                        <div class="me-4 ms-3"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                        <div class="me-4 ms-3"> <img src="./img/avatar_8.jpg" alt=""></div>
                                         <div>
                                             <p class="m-0">Michele</p>
                                             <p class="text-secondary">Ultimo messaggio inviato</p>
@@ -167,14 +167,43 @@
                         </div>
                     </div>
 
-                    <div class="col-8 pt-3">
-                        ciao
+                    <div class="col-8 p-0 d-flex flex-column justify-content-between">
+                        <div class="d-flex p-2 align-items-center bg-profile">
+                            <div class="d-flex"> <img src="./img/avatar_1.jpg" alt=""></div>
+                            <div class="w-50 ms-3 d-flex flex-column align-items-start justify-content-center">
+                                <p class="m-0">Michele</p>
+                                <p class="text-secondary">Ultimo accesso oggi alle 12:00</p>
+                            </div>
+
+                            <div class="d-flex text-end w-100 justify-content-end">
+                                <i class="fa-solid fa-magnifying-glass fs-5 mx-2 text-secondary"></i>
+                                <i class="fa-solid fa-paperclip mx-2 fs-5 text-secondary"></i>
+                                <i class="fa-solid fa-ellipsis-vertical mx-2 fs-5 text-secondary"></i>
+                            </div>
+                        </div>
+
+                        <div class="container-text py-3 bg-profile">
+                            <div class="row">
+                                <div class="col-1 fs-4 d-flex justify-content-center align-items-center">
+                                    <i class="fa-regular fa-face-smile" style="color: #c0c0c0;"></i>
+                                </div>
+
+                                <div class="col-10 d-flex justify-content-center">
+                                    <input type="text" class="w-100 form-control py-2"
+                                        placeholder="Scrivi un messaggio">
+                                </div>
+
+                                <div class="col-1 d-flex justify-content-center align-items-center">
+                                    <i class="fa-solid fa-microphone fs-5 text-secondary"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
+    </main>
 
-    </div>
 
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
