--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                         <!-- Div che contiene la lista dei contatti -->
                         <div class="bg-light">
                             <ul class="p-0 m-0">
-                                <li class="d-flex align-items-center justify-content-between pb-3 pt-2 pe-2"
-                                    v-for="person, index in contacts">
+                                <li id="contact"
+                                    class="d-flex align-items-center justify-content-between pb-3 pt-2 pe-2"
+                                    v-for="person, index in contacts" @click="contactClicked(index)">
                                     <div class="d-flex">
                                         <div class="me-4 ms-3"> <img :src="person.avatar" alt=""></div>
                                         <div>
@@ -79,9 +80,9 @@
                     <div class="col-8 p-0 d-flex flex-column justify-content-between">
                         <div class="d-flex flex-column">
                             <div class="bg-profile d-flex p-2 align-items-center">
-                                <div class="d-flex"> <img src="./img/avatar_1.jpg" alt=""></div>
+                                <div class="d-flex"> <img :src=" contacts[active].avatar " alt=""> </div>
                                 <div class="w-50 ms-3 d-flex flex-column align-items-start justify-content-center">
-                                    <p class="m-0">Michele</p>
+                                    <p class="m-0">{{ contacts[active].name }}</p>
                                     <p class="text-secondary">Ultimo accesso oggi alle 12:00</p>
                                 </div>
 
@@ -103,29 +104,8 @@
                                         <p class="text-end text-secondary">15:50</p>
                                     </div>
                                 </div>
-
-                                <!-- <div>
-                                    <div class="message-sent mb-4"
-                                        :class="contacts[0].messages[1].status == 'sent' ? 'message-sent float-end' : ' message-received float-start' ">
-                                        <p class="margin-message text-start m-0">
-                                            Ricordati di stendere i panni</p>
-                                        <p class="text-end text-secondary">15:50</p>
-                                    </div>
-                                </div>
-
-                                <div>
-                                    <div class="message-received mb-4 bg-light"
-                                        :class="contacts[0].messages[2].status == 'sent' ? 'message-sent float-end' : ' message-received float-start' ">
-                                        <p class=" margin-message text-start m-0">
-                                            Tutto fatto!</p>
-                                        <p class="text-end text-secondary">15:50</p>
-                                    </div>
-                                </div> -->
                             </div>
                         </div>
-
-
-
 
                         <div class="container-text py-3 bg-profile">
                             <div class="row">
