[UPD] Added word-wrap

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         :class="message.status == 'sent' ? 'message-sent float-end' : ' message-received float-start' ">
                                         <p class="margin-message text-start m-0">
                                             {{ message.message }}</p>
-                                        <p class="text-end text-secondary">15:50</p>
+                                        <p class="text-end text-secondary m-0">15:50</p>
                                     </div>
                                 </div>
                             </div>
