--- a/index.html
+++ b/index.html
@@ -104,10 +104,17 @@
                                 <div v-for="message, index in contacts[active].messages">
                                     <div class="message-sent mb-4 "
                                         :class="message.status == 'sent' ? 'message-sent float-end' : ' message-received float-start' ">
-                                        <p class="margin-message text-start m-0">
-                                            {{ message.message }}</p>
-                                        <p class="text-end text-secondary m-0"> {{lastAccess() }} </p>
-                                        <!-- {{ message.date.split(' ')[1] }} -->
+                                        <p class="margin-message text-start m-0 d-flex justify-content-between">
+                                            {{ message.message }}
+                                            <i class="fa-solid fa-angle-down float-end text-secondary mt-1 ms-2"
+                                                data-bs-toggle="dropdown" aria-expanded="false"></i>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Option 1</a></li>
+                                            <li><a class="dropdown-item" href="#">Option 2</a></li>
+                                        </ul>
+                                        </p>
+                                        <p class="text-end text-secondary m-0"> {{message.date.split(" ")[1].slice(0, 5)
+                                            }} </p>
                                     </div>
                                 </div>
                             </div>
@@ -139,6 +146,9 @@
         </div>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/luxon@3.4.4/build/global/luxon.min.js"></script>
     <script src="./js/script.js" type="text/javascript"></script>
