--- a/index.html
+++ b/index.html
@@ -106,15 +106,12 @@
                                         :class="message.status == 'sent' ? 'message-sent float-end' : ' message-received float-start' ">
                                         <p class="margin-message text-start m-0 d-flex justify-content-between">
                                             {{ message.message }}
-                                            <i class="fa-solid fa-angle-down float-end text-secondary mt-1 ms-2"
-                                                data-bs-toggle="dropdown" aria-expanded="false"></i>
-                                        <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="#">Option 1</a></li>
-                                            <li><a class="dropdown-item" href="#">Option 2</a></li>
-                                        </ul>
+                                            <button class="border-0 btn btn-sm ms-4 dropdown">
+                                                <i class="fa-solid fa-angle-down text-secondary mt-1 ms-2 "></i>
+                                            </button>
                                         </p>
-                                        <p class="text-end text-secondary m-0"> {{message.date.split(" ")[1].slice(0, 5)
-                                            }} </p>
+                                        <p class="text-end text-secondary m-0"> {{message.date.split(" ")[1].slice(0,
+                                            5)}} </p>
                                     </div>
                                 </div>
                             </div>
